<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.org.blaze.MainActivity">

    <LinearLayout
        android:id="@+id/top_linear"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/app_background"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom|center_horizontal"
            android:src="@mipmap/ic_logo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_linear"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@mipmap/ic_background"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linear_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <com.org.blaze.widget.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/your_gender"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:fontTypeTextView="segoeui.ttf" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/linear_male"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_unselect"
                    android:gravity="center"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:src="@drawable/ic_male" />

                    <com.org.blaze.widget.CustomFontTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/male"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        app:fontTypeTextView="segoeui-semibold.ttf" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear_female"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_select"
                    android:gravity="center"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:src="@drawable/ic_female" />

                    <com.org.blaze.widget.CustomFontTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        app:fontTypeTextView="segoeui-semibold.ttf" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/ic_seprator" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <com.org.blaze.widget.CustomFontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/how_old"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                app:fontTypeTextView="segoeui.ttf" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <!--<antistatic.spinnerwheel.WheelHorizontalView-->
                <!--android:id="@+id/spinner_age"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="50dp"-->
                <!--android:background="@drawable/spinner_background"-->
                <!--app:selectionDivider="@drawable/button_select"-->
                <!--app:selectionDividerDimmedAlpha="255"-->
                <!--app:selectionDividerActiveAlpha="255"-->
                <!--app:selectionDividerWidth="50dp" />-->
                <antistatic.spinnerwheel.WheelHorizontalView
                    android:id="@+id/spinner_age"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:isAllVisible="true"
                    android:background="@drawable/spinner_background" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/ic_seprator" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="8dp"
            android:gravity="center">

            <com.org.blaze.widget.CustomFontTextView
                android:id="@+id/btn_done"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/button_select"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/done"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:fontTypeTextView="segoeui-semibold.ttf" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>

