<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/list_selector"
    android:orientation="vertical">

    <com.org.blaze.widget.CustomFontTextView
        android:id="@+id/place_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="Some Bar long long Name"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:fontTypeTextView="segoe_ui_bold.ttf" />

    <RelativeLayout
        android:id="@+id/relative_store"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

        <ImageView
            android:id="@+id/place_img"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:src="@drawable/bar_store1" />

        <LinearLayout
            android:id="@+id/left_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <LinearLayout
                android:id="@+id/linear_open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <com.org.blaze.widget.CustomFontTextView
                    android:id="@+id/label_open_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/open_close"
                    android:textColor="@android:color/white"
                    android:textSize="10sp"
                    app:fontTypeTextView="segoeui.ttf" />

                <com.org.blaze.widget.CustomFontTextView
                    android:id="@+id/txt_open_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="7AM-3PM"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    app:fontTypeTextView="segoeui.ttf" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <com.org.blaze.widget.CustomFontTextView
                    android:id="@+id/label_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distance"
                    android:textColor="@android:color/white"
                    android:textSize="10sp"
                    app:fontTypeTextView="segoeui.ttf" />

                <com.org.blaze.widget.CustomFontTextView
                    android:id="@+id/txt_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.8 miles"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    app:fontTypeTextView="segoeui.ttf" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_review"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/temp_star" />

                <com.org.blaze.widget.CustomFontTextView
                    android:id="@+id/txt_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="6 Revivews"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    app:fontTypeTextView="segoeui.ttf" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/right_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:id="@+id/img_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/linear_male"
                    android:src="@drawable/ic_male" />

                <LinearLayout
                    android:id="@+id/linear_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="8dp"
                    android:layout_toRightOf="@+id/img_male"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.org.blaze.widget.CustomFontTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="14"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        app:fontTypeTextView="segoeui.ttf" />

                    <com.org.blaze.widget.CustomFontTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/males"
                        android:textColor="@android:color/white"
                        android:textSize="10sp"
                        app:fontTypeTextView="segoeui.ttf" />

                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center">

                <ImageView
                    android:id="@+id/img_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_female_long" />

                <LinearLayout
                    android:id="@+id/linear_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="8dp"
                    android:layout_toRightOf="@+id/img_female"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.org.blaze.widget.CustomFontTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="18"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        app:fontTypeTextView="segoeui.ttf" />

                    <com.org.blaze.widget.CustomFontTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/females"
                        android:textColor="@android:color/white"
                        android:textSize="10sp"
                        app:fontTypeTextView="segoeui.ttf" />

                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/temp_chart" />
            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>
</LinearLayout>